--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,11 @@
     },
     "autoload": { 
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "Src/"
         }
     },
     "config": {
         "optimize-autoloader": true
     }
 
-
 }
-
-
