--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY = “12345HOLAMUNDO/*/&^%”
 USER = "root"
 PASSWORD = "252411"
-DB = "BD_Habitos"
+DB = "seguimiento_habitos"
 IP = "127.0.0.1"
 PORT = "3306"
