Intento de Conexion Back-Front (fallo)

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
-RewriteEngine On
-Options All -Indexes
+#RewriteEngine On
+#Options All -Indexes
 
 #prevenir acceso al archivo .htaccess
-<files .htaccess>
-order allow,deny
-deny from all
-</files>
+#<files .htaccess>
+#order allow,deny
+#deny from all
+#</files>
